# FDOM-ComputerAgent

./: .gitignore  README.md  pyproject.toml
apps/freeform/: fdom.json  metadata.json
apps/notes/: fdom.json  metadata.json
utils/: __init__.py  controller.py  gui_controller.py  seraphine.py
utils/fdom/: app_controller.py  click_engine.py  element_interactor.py  fdom_config.json  old.txt
utils/macManager/: mac_window_functions.py  mac_window_manager.py  mac_window_test.py
utils/windowManager/: legend.txt  safe_applications.json
